fix: scrollbar size important

--- a/source/css/components/_scrollbar.scss
+++ b/source/css/components/_scrollbar.scss
@@ -46,7 +46,7 @@
 }
 
 .hidden-scrollbar {
-    --scrollbar-size: 0;
+    --scrollbar-size: 0 !important;
 
     @supports (scrollbar-width: none) {
         /* stylelint-disable-next-line plugin/no-unsupported-browser-features -- its ok for custom scrollbar */
